deploy/bases/varnish/varnish.yaml
apiVersion: v1
kind: Service
metadata:
  name: varnish
  labels:
    app: varnish
spec:
  selector:
    app: varnish
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  - name: proxy
    port: 8081
    protocol: TCP
    targetPort: proxy
  - name: admin
    port: 6081
    protocol: TCP
    targetPort: admin

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: varnish
spec:
  selector:
    matchLabels:
      app: varnish
  replicas: 1
  template:
    metadata:
      labels:
        app: varnish
    spec:
      containers:
      - image: varnish:7.7@sha256:1a684d37ec7a4f441a36c84945ee7713d1ddd59e8204d4040aeecb529ed4f68e
        name: varnish
        command: ["/bin/sh"]
        args:
          - -c
          - |
            varnishd -a :8080 -a :8081,PROXY -a :6081 -f /etc/varnish/default.vcl -s default,512M;
            varnishncsa -F '%h %l %u %t "%r" %s %b "%{Referer}i" "%{User-agent}i" %{Varnish:handling}x'
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: proxy
          containerPort: 8081
          protocol: TCP
        - name: admin
          containerPort: 6081
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 5
        resources:
          requests:
            cpu: 50m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - name: config
          mountPath: /etc/varnish/default.vcl
          subPath: default.vcl
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: varnish
